# practica_3_info2

./: CMakeLists.txt  administrador.cpp  administrador.h  auxiliares.cpp  auxiliares.h  codificar.cpp  codificar.h  decodificar.cpp  decodificar.h  limpiarartemporales.cpp  limpiarartemporales.h  login.cpp  login.h  main.cpp  menucliente.cpp  menucliente.h
